--- a/KanjiRyokucha/SRSViewController.xib
+++ b/KanjiRyokucha/SRSViewController.xib
@@ -35,16 +35,16 @@
                     <rect key="frame" x="0.0" y="506" width="439" height="58"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vf" translatesAutoresizingMaskIntoConstraints="NO" id="iZZ-Cn-VfS">
-                            <rect key="frame" x="189.5" y="0.0" width="60" height="58"/>
+                            <rect key="frame" x="145.5" y="0.0" width="60" height="58"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="5bT-bP-ahh"/>
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Obk-Ep-6i0">
-                            <rect key="frame" x="4" y="0.0" width="181.5" height="58"/>
+                            <rect key="frame" x="4" y="0.0" width="137.5" height="58"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TBK-IQ-J9g">
-                                    <rect key="frame" x="0.0" y="0.0" width="181.5" height="58"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="137.5" height="58"/>
                                     <string key="text">by the same developer
 for iPhone and iPad</string>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
@@ -53,13 +53,17 @@ for iPhone and iPad</string>
                                 </label>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="7sH-47-FtC">
-                            <rect key="frame" x="253.5" y="0.0" width="181.5" height="58"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="-20" translatesAutoresizingMaskIntoConstraints="NO" id="7sH-47-FtC">
+                            <rect key="frame" x="209.5" y="0.0" width="225.5" height="58"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZBY-kX-MH5">
-                                    <rect key="frame" x="0.0" y="0.0" width="181.5" height="58"/>
-                                    <string key="text">Vinyl Fetish - music player
-vinylize your music library!</string>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vinyl Fetish - music player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZBY-kX-MH5">
+                                    <rect key="frame" x="28" y="0.0" width="170" height="39"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vinylize your music library!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDd-zf-0qo">
+                                    <rect key="frame" x="43" y="19" width="139.5" height="39"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -77,7 +81,7 @@ vinylize your music library!</string>
                     <color key="backgroundColor" red="1" green="0.91764705882352937" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="7sH-47-FtC" firstAttribute="top" secondItem="ppK-MT-H4V" secondAttribute="top" id="9wL-NG-fB7"/>
-                        <constraint firstItem="iZZ-Cn-VfS" firstAttribute="centerX" secondItem="ppK-MT-H4V" secondAttribute="centerX" id="D28-Nc-2Iu"/>
+                        <constraint firstItem="iZZ-Cn-VfS" firstAttribute="centerX" secondItem="ppK-MT-H4V" secondAttribute="centerX" multiplier="0.8" id="D28-Nc-2Iu"/>
                         <constraint firstItem="iZZ-Cn-VfS" firstAttribute="top" secondItem="ppK-MT-H4V" secondAttribute="top" id="DKs-yN-BMc"/>
                         <constraint firstAttribute="height" constant="58" id="HRK-eM-kwj"/>
                         <constraint firstItem="Obk-Ep-6i0" firstAttribute="leading" secondItem="ppK-MT-H4V" secondAttribute="leading" constant="4" id="IC2-9p-CdM"/>
