--- a/KanjiRyokucha/SRSViewController.xib
+++ b/KanjiRyokucha/SRSViewController.xib
@@ -28,23 +28,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="center" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="439" height="564"/>
+            <rect key="frame" x="0.0" y="0.0" width="496" height="564"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ppK-MT-H4V">
-                    <rect key="frame" x="0.0" y="506" width="439" height="58"/>
+                    <rect key="frame" x="0.0" y="506" width="496" height="58"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vf" translatesAutoresizingMaskIntoConstraints="NO" id="iZZ-Cn-VfS">
-                            <rect key="frame" x="145.5" y="0.0" width="60" height="58"/>
+                            <rect key="frame" x="168.5" y="0.0" width="60" height="58"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="5bT-bP-ahh"/>
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Obk-Ep-6i0">
-                            <rect key="frame" x="4" y="0.0" width="137.5" height="58"/>
+                            <rect key="frame" x="4" y="0.0" width="160.5" height="58"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TBK-IQ-J9g">
-                                    <rect key="frame" x="0.0" y="0.0" width="137.5" height="58"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="160.5" height="58"/>
                                     <string key="text">by the same developer
 for iPhone and iPad</string>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
@@ -54,25 +54,24 @@ for iPhone and iPad</string>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="-20" translatesAutoresizingMaskIntoConstraints="NO" id="7sH-47-FtC">
-                            <rect key="frame" x="209.5" y="0.0" width="225.5" height="58"/>
+                            <rect key="frame" x="232.5" y="0.0" width="259.5" height="58"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vinyl Fetish - music player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZBY-kX-MH5">
-                                    <rect key="frame" x="28" y="0.0" width="170" height="39"/>
+                                    <rect key="frame" x="44.5" y="0.0" width="170" height="39"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vinylize your music library!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDd-zf-0qo">
-                                    <rect key="frame" x="43" y="19" width="139.5" height="39"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vinylize your music library!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jDd-zf-0qo">
+                                    <rect key="frame" x="60" y="19" width="139.5" height="39"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="phX-3I-lq6">
-                            <rect key="frame" x="0.0" y="0.0" width="439" height="58"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="phX-3I-lq6">
+                            <rect key="frame" x="0.0" y="0.0" width="496" height="58"/>
                             <accessibility key="accessibilityConfiguration" label="vinyl fetish music player"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain"/>
@@ -88,14 +87,18 @@ for iPhone and iPad</string>
                         <constraint firstItem="7sH-47-FtC" firstAttribute="leading" secondItem="iZZ-Cn-VfS" secondAttribute="trailing" constant="4" id="IFr-eg-5QQ"/>
                         <constraint firstItem="Obk-Ep-6i0" firstAttribute="top" secondItem="ppK-MT-H4V" secondAttribute="top" id="OfB-jN-g14"/>
                         <constraint firstItem="iZZ-Cn-VfS" firstAttribute="height" secondItem="ppK-MT-H4V" secondAttribute="height" id="RfC-nQ-0vh"/>
+                        <constraint firstAttribute="trailing" secondItem="phX-3I-lq6" secondAttribute="trailing" id="WGX-x6-KVg"/>
                         <constraint firstItem="iZZ-Cn-VfS" firstAttribute="leading" secondItem="Obk-Ep-6i0" secondAttribute="trailing" constant="4" id="WN9-91-zx7"/>
+                        <constraint firstAttribute="bottom" secondItem="phX-3I-lq6" secondAttribute="bottom" id="ZOg-wK-KcT"/>
+                        <constraint firstItem="phX-3I-lq6" firstAttribute="top" secondItem="ppK-MT-H4V" secondAttribute="top" id="ZQk-pJ-3x8"/>
                         <constraint firstAttribute="trailing" secondItem="7sH-47-FtC" secondAttribute="trailing" constant="4" id="aXi-gF-vZ4"/>
                         <constraint firstAttribute="bottom" secondItem="Obk-Ep-6i0" secondAttribute="bottom" id="bWD-vw-5My"/>
                         <constraint firstAttribute="bottom" secondItem="7sH-47-FtC" secondAttribute="bottom" id="pfi-gv-K5g"/>
+                        <constraint firstItem="phX-3I-lq6" firstAttribute="leading" secondItem="ppK-MT-H4V" secondAttribute="leading" id="v2W-jJ-eUD"/>
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u6p-5U-MRq" userLabel="New Stack View">
-                    <rect key="frame" x="174.5" y="0.0" width="90" height="125"/>
+                    <rect key="frame" x="203" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61K-rn-FdX" userLabel="New view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="95"/>
@@ -142,7 +145,7 @@ for iPhone and iPad</string>
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kTh-nf-C0G" userLabel="Due Stack View">
-                    <rect key="frame" x="44.5" y="0.0" width="90" height="125"/>
+                    <rect key="frame" x="73" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GKn-E9-G3C" userLabel="Due view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="95"/>
@@ -190,7 +193,7 @@ for iPhone and iPad</string>
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9OS-pm-Jhm" userLabel="Failed Stack View">
-                    <rect key="frame" x="304.5" y="0.0" width="90" height="125"/>
+                    <rect key="frame" x="333" y="0.0" width="90" height="125"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dg-30-VUX" userLabel="Failed view">
                             <rect key="frame" x="0.0" y="0.0" width="90" height="125"/>
@@ -237,14 +240,14 @@ for iPhone and iPad</string>
                     </constraints>
                 </stackView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kanjibkg.png" translatesAutoresizingMaskIntoConstraints="NO" id="BWI-X9-MOk">
-                    <rect key="frame" x="69.5" y="132" width="300" height="300"/>
+                    <rect key="frame" x="98" y="132" width="300" height="300"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="BWI-X9-MOk" secondAttribute="height" multiplier="1:1" id="EFD-6P-PCV"/>
                         <constraint firstAttribute="width" constant="300" id="evv-iW-ijk"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lOr-1a-dGS">
-                    <rect key="frame" x="69.5" y="432" width="93" height="29"/>
+                    <rect key="frame" x="98" y="432" width="93" height="29"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                     <state key="normal" title="refresh status">
                         <color key="titleColor" red="0.49938017213853447" green="0.61768196202531644" blue="0.10581740830677744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -254,7 +257,7 @@ for iPhone and iPad</string>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAJ-ux-uci">
-                    <rect key="frame" x="273.5" y="432" width="96" height="27"/>
+                    <rect key="frame" x="302" y="432" width="96" height="27"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="@kanji_ryokucha">
                         <color key="titleColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -264,11 +267,11 @@ for iPhone and iPad</string>
                     </state>
                 </button>
                 <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Uij-v0-a4Q">
-                    <rect key="frame" x="69.5" y="132" width="300" height="300"/>
+                    <rect key="frame" x="98" y="132" width="300" height="300"/>
                     <color key="color" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                 </activityIndicatorView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSJ-QZ-DOD" userLabel="Review container">
-                    <rect key="frame" x="20" y="130" width="399" height="350"/>
+                    <rect key="frame" x="20" y="130" width="456" height="350"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="338" id="6xi-8r-KEt"/>
                         <constraint firstAttribute="height" constant="350" id="ypg-Ku-32Z" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
@@ -361,7 +364,7 @@ for iPhone and iPad</string>
                     <exclude reference="w36-pw-nKg"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="122.8125" y="82.5"/>
+            <point key="canvasLocation" x="176.25" y="82.5"/>
         </view>
     </objects>
     <resources>
